--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=live-scores
 server.port=8099
 management.endpoints.web.exposure.include=health,info,metrics
 livescore.base-url=https://livescore-api.com
-livescore.key=xxxx
-livescore.secret=xxxx
+livescore.key=putGDPmL6HLWviHk
+livescore.secret=9y13uOJzFWCEx2AXw4DaUZV0HHXd0Ex9
 livescore.quota-per-day=14500
 livescore.competition-ids=1,2,3,4,5,35,38,42,223,244,245,305,313,305,422
 
